--- a/src/tpl/index.twig
+++ b/src/tpl/index.twig
@@ -111,6 +111,7 @@ Harlej mají za sebou několik DVD, nespočet vydaných alb a posledním z nich 
                         img: "bands/2-nickhillson.webp",
                         alt: "Nick Hillson",
                         link: "/kapely/nickhillson",
+                        description: "Nick Hillson je 26letý rapper a textař. Dlouhá léta se zkoušel prosadit sólově, ale v roce 2021 přišel zásadní zlom, kdy se díky dlouholetému kamarádovi Lukášovi Novotnému (DJ Orogo) spojil s nadaným muzikantem Petrem Kupkou (Bicí). Nyní již tato trojice 3 roky působí společně jako hiphopová crew, kde se Petr stal postupně hlavním hudebním producentem."
                     },
                     {
                         img: "bands/3-astroboy.webp",
