--- a/src/tpl/Kapely.twig
+++ b/src/tpl/Kapely.twig
@@ -42,6 +42,31 @@
         img: "bands/7-karolakvido.webp",
         alt: "Karol a Kvído",
         link: "/kapely/karolakvido",
+    },
+    {
+        img: "bands/9-strasnybanani.webp",
+        alt: "Strašný banáni",
+        link: "/kapely/strasnybanani",
+    },
+    {
+        img: "bands/10-jimmyg.webp",
+        alt: "Jimmy-G",
+        link: "/kapely/jimmyg",
+    },
+    {
+        img: "bands/11-irit.webp",
+        alt: "Irit",
+        link: "/kapely/irit",
+    },
+    {
+        img: "bands/12-peladores.webp",
+        alt: "Peladores",
+        link: "/kapely/peladores",
+    },
+    {
+        img: "bands/13-guyg.webp",
+        alt: "Guy G",
+        link: "/kapely/guyg",
     }
 ]%}
 
