--- a/src/tpl/components/core/footer/footer.twig
+++ b/src/tpl/components/core/footer/footer.twig
@@ -114,21 +114,7 @@
             <div class="footer__sponsor-item">
                 <div class="footer__sponsor-image">
                     {% include "@components/core/image/image.twig" with { item: {
-                        img: "sponsors/hoki.png"
-                    }} %}
-                </div>
-            </div>
-            <div class="footer__sponsor-item">
-                <div class="footer__sponsor-image">
-                    {% include "@components/core/image/image.twig" with { item: {
                         img: "sponsors/ldm.png"
-                    }} %}
-                </div>
-            </div>
-            <div class="footer__sponsor-item">
-                <div class="footer__sponsor-image">
-                    {% include "@components/core/image/image.twig" with { item: {
-                        img: "sponsors/orlicko.png"
                     }} %}
                 </div>
             </div>
@@ -150,6 +136,55 @@
                 <div class="footer__sponsor-image">
                     {% include "@components/core/image/image.twig" with { item: {
                         img: "sponsors/starmon.png"
+                    }} %}
+                </div>
+            </div>
+            <div class="footer__sponsor-item footer__sponsor-item--svg">
+                <div class="footer__sponsor-image">
+                    {% include "@components/core/image/image.twig" with { item: {
+                        img: "sponsors/kudy-z-nudy.svg"
+                    }} %}
+                </div>
+            </div>
+            <div class="footer__sponsor-item footer__sponsor-item--white footer__sponsor-item--svg">
+                <div class="footer__sponsor-image">
+                    {% include "@components/core/image/image.twig" with { item: {
+                        img: "sponsors/kc.svg"
+                    }} %}
+                </div>
+            </div>
+            <div class="footer__sponsor-item footer__sponsor-item--svg">
+                <div class="footer__sponsor-image">
+                    {% include "@components/core/image/image.twig" with { item: {
+                        img: "sponsors/pirell.svg"
+                    }} %}
+                </div>
+            </div>
+            <div class="footer__sponsor-item footer__sponsor-item--svg">
+                <div class="footer__sponsor-image">
+                    {% include "@components/core/image/image.twig" with { item: {
+                        img: "sponsors/retova.svg"
+                    }} %}
+                </div>
+            </div>
+            <div class="footer__sponsor-item footer__sponsor-item--svg">
+                <div class="footer__sponsor-image">
+                    {% include "@components/core/image/image.twig" with { item: {
+                        img: "sponsors/Skipi_logo.svg"
+                    }} %}
+                </div>
+            </div>
+            <div class="footer__sponsor-item footer__sponsor-item--svg">
+                <div class="footer__sponsor-image">
+                    {% include "@components/core/image/image.twig" with { item: {
+                        img: "sponsors/sluneo.svg"
+                    }} %}
+                </div>
+            </div>
+            <div class="footer__sponsor-item footer__sponsor-item--white">
+                <div class="footer__sponsor-image">
+                    {% include "@components/core/image/image.twig" with { item: {
+                        img: "sponsors/stasek.png"
                     }} %}
                 </div>
             </div>
