--- a/src/tpl/index.twig
+++ b/src/tpl/index.twig
@@ -146,6 +146,36 @@ Původní záměr našeho shledání bylo odehrát pár letních koncertů pod s
                         link: "/kapely/karolakvido",
                         description: "Karol a Kvído jsou dětská hudební dvojice, jejichž úkolem je děti bavit a přitom písničkou něco naučit. Více o této dvojici asi nemusím psát, všichni rodiče je znají a všechny děti si známé písničky od Karol a Kvída zpívají. 🎨♥️",
                     },
+                    {
+                        img: "bands/9-strasnybanani.webp",
+                        alt: "Strašný banáni",
+                        link: "/kapely/strasnybanani",
+                        description: "Banáni jsou opravdovým přírodním antidepresivem. Co se týká podpory tvorby serotoninu, jsou mezi ovocem skutečnými favority. Jejich hudba baví, dává, rozesmívá a kope. Ale bacha - každý, kdo přišel na jejich koncert, už nikdy nebral život tak vážně!",
+                    },
+                    {
+                        img: "bands/10-jimmyg.webp",
+                        alt: "Jimmy-G",
+                        link: "/kapely/jimmyg",     
+                        description: "Jimmy-G je rapper a textař z Velkého Meziříčí, který se kolem hudby motá od raného dětství. Z vášnivého fanouška boom rapu a rapu obecně, se v roce 2016 vyklubal interpret s ostrým jazykem a smyslem pro humor i hloubku, které využívá ve své tvorbě.",
+                    },
+                    {
+                        img: "bands/11-irit.webp",
+                        alt: "Irit",
+                        link: "/kapely/irit",
+                        description: "Moje meno je Irit pochádzam z východného Slovenska spod Tatier a rapu sa venujem už pekných pár rokov. Za ten čas sa mi podarilo odohrať zopár väčších koncertov a mnoho lokálnych.",
+                    },
+                    {
+                        img: "bands/12-peladores.webp",
+                        alt: "Peladores",
+                        link: "/kapely/peladores",
+                        description: "Kapela Peladores je smíšená studentská kapela z třebovského gymnázia. Společně fungují od září roku 2022. Stali se tradiční součástí gymnaziálních akcí a v září například zahajovali šestý ročník litomyšlské Spacák párty. ",
+                    },
+                    {
+                        img: "bands/13-guyg.webp",
+                        alt: "Guy G",
+                        link: "/kapely/guyg",       
+                        description: "Guy G je rapující DJ, který se na scéně pohybuje od přelomu století. Tři sólový alba. Producent kombinující blues, jazz, country a Hip Hop a je to Třebovák",
+                    },
                 ]%}
                 {% include "@components/box/carousel-band/carousel-band.twig" with { props: {
                     loop: true,
@@ -211,6 +241,7 @@ Původní záměr našeho shledání bylo odehrát pár letních koncertů pod s
                     <div class="grid">
                         <div class="grid__col">
                             <div class="information__location u-text-center">
+                                <p>Festival se koná pod záštitou hejtmana Pardubického kraje Martina Netolického<br> a starosty České Třebové Zdeňka Řeháka</p>
                                 <h4>Místo konání Festivalu:</h4>
                                 <ul class="information__address">
                                     <li>Fotbalový stadion Česká Třebová</li>
