--- a/src/css/abstracts/_variables.scss
+++ b/src/css/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // Colors
 $colorPrimary: #e30613;
-$colorSecondary: #00a657d9;
+$colorSecondary: #FBB237;
 $colorTerciary: #8c0005;
 $gradientPrimary: linear-gradient(180deg, $colorSecondary, $colorTerciary);
 $colorBlack: #000000;
