--- a/src/css/core/objects/_animations.scss
+++ b/src/css/core/objects/_animations.scss
@@ -20,17 +20,17 @@
 	50% { transform: rotate(0eg); }
 	75% { transform: rotate(-5deg); }
 	100% { transform: rotate(0deg); }
-  }
+}
 @keyframes neon {
 	0% {
 	  filter: drop-shadow(0px 0px 1px #fff) drop-shadow(0px 0px 3px #fff)
-		drop-shadow(0px 0px 10px #64c294d9) drop-shadow(0px 0px 30px #64c294d9
-		) drop-shadow(0px 0px 30px #00a657d9);
+		drop-shadow(0px 0px 10px #f8be59) drop-shadow(0px 0px 30px #f8be59
+		) drop-shadow(0px 0px 30px #FBB237);
 	}
 	100% {
 	  filter: drop-shadow(0px 0px 1px #fff) drop-shadow(0px 0px 6px #fff)
-		drop-shadow(0px 0px 15px #64c294d9) drop-shadow(0px 0px 30px #64c294d9)
-		drop-shadow(0px 0px 40px #64c294d9);
+		drop-shadow(0px 0px 15px #f8be59) drop-shadow(0px 0px 30px #f8be59)
+		drop-shadow(0px 0px 40px #f8be59);
 	}
 }
 @keyframes music {
