--- a/src/tpl/layout/layout.twig
+++ b/src/tpl/layout/layout.twig
@@ -88,7 +88,7 @@
 				items: [
 					{
 						title: "Vstupenky",
-						link: "#listky"
+						link: "/#listky"
 					},
 					{
 						title: "Kapely",
