--- a/src/tpl/program.twig
+++ b/src/tpl/program.twig
@@ -5,7 +5,7 @@
 {% set program = [
     {
         img: "program/program.webp",
-        title: "Letošní program:",
+        title: "Co vás kdy čeká:",
     },
 ]%}
 
